Fix event issues